...
                                child: Opacity(
                                  opacity:
                                      (verticalPosition == size.height * 0.6)
                                          ? 1.0
                                          : 0.0,
                                  child: Text(
                                    'ON MAP',
                                    style:
                                        TextStyle(fontWeight: FontWeight.bold),
                                  ),
                                ),
                              ),
                            ),
...
